baml_language/crates/baml_tests/snapshots/retry_policy/baml_tests__retry_policy__03_hir.snap
---
source: target/debug/build/baml_tests-5af6b621dd74eb70/out/generated_tests.rs
expression: output
---
=== HIR ITEMS ===
function MyClient$options() -> <unknown> {
    baml.llm.build_primitive_client("MyClient", "openai", "user", ["user", "assistant", "system"], { "model": "gpt-4" })
}

client MyClient {
  provider: openai
}
