baml_language/crates/baml_tests/snapshots/retry_policy/baml_tests__retry_policy__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.MyClient$new() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: void
    let _2: map<void, void>
    let _3: map<void, void>
    let _4: map<"model", "gpt-4">

    bb0: {
        _2 = {  };
        _3 = {  };
        _4 = { const "model": const "gpt-4" };
        _1 = PrimitiveClientOptions { const null, const null, const null, const null, const null, const null, copy _2, copy _3, copy _4 };
        _0 = PrimitiveClient { const "MyClient", const "openai", copy _1 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
