baml_language/crates/baml_tests/snapshots/retry_policy/baml_tests__retry_policy__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call ?
    store_global ?100
    call ?
    store_global ?101
    load_const ?
    return
}

function user.MyClient$new() -> null {
    alloc_instance PrimitiveClient
    copy 0
    load_const "MyClient"
    store_field .name
    copy 0
    load_const "openai"
    store_field .provider
    copy 0
    alloc_instance PrimitiveClientOptions
    copy 0
    load_const null
    store_field .base_url
    copy 0
    load_const null
    store_field .default_role
    copy 0
    load_const null
    store_field .allowed_roles
    copy 0
    load_const null
    store_field .remap_roles
    copy 0
    load_const null
    store_field .api_key
    copy 0
    load_const null
    store_field .provider_options
    copy 0
    alloc_map 0
    store_field .headers
    copy 0
    alloc_map 0
    store_field .query_params
    copy 0
    load_const "gpt-4"
    load_const "model"
    alloc_map 1
    store_field .request_body
    store_field .options
    return
}
